--- a/css/positioning/octo-page.css
+++ b/css/positioning/octo-page.css
@@ -1,23 +1,18 @@
+main {
+	position: relative;
+}
 section {
 	position: relative;
-	margin-left: 70px;
-	margin-top: 70px;
+	margin-top: 100px;
+	margin-left: 100px;
 }
-
-#octopus {
+#glass {
 	position: absolute;
-	left-margin: 40px;
-	margin-top: 40px;
+	margin-left: 40px;
+	margin-top: 100px;
 }
 #hat {
-	position: fixed;
-	margin-left: -20px;
-	margin-top: -20px;
-	z-index: 10;
-}
-#glasses {
 	position: absolute;
-	margin-top: 140px;
-	margin-left: 40px;
-	z-index: 10;
+	margin-top: -40px;
+	margin-left: -5px;
 }
